Pending changes in the mainline
===============================


Version 2.5 (2022-12-05)
========================

* Click-drag is available on the vertical slider
* Added key bindings:
  - Left/right arrows to change the active frame
  - Up/down arrows to change the active series
  - Page up/down to change the active study
  - Space bar to play/pause videos
* New URL argument "menu" to change the layout of the list of studies/series
* The first series to be loaded is now automatically opened
* Annotations are grouped into one submenu for narrow screens
* Support generation of ZIP archives in the presence of authorization tokens
* Fix measurement of arcs
* Width of the vertical slider has doubled to ease user interactions
* Patient sex is displayed in the top-left information panel


Version 2.4 (2022-11-02)
========================

* New types of annotations:
  - Text annotation
  - Pixel probe
  - Rectangle probe
  - Ellipse probe
* Added left/right rotation buttons
* Added magnifying glass
* Added vertical slider showing position of the current frame inside the series
* Display of orientation markers
* The text field with the instance number is editable to go to a specific instance
* Linear interpolation of images can be turned off in the user preferences
* New configuration options:
  - "ShowInfoPanelAtStartup" to control the info panel at startup
  - "ShowUserPreferencesButton" to show the button for setting preferences
  - "ShowNotForDiagnosticUsageDisclaimer" to show disclaimer about diagnostic usage
  - "DicomWebHttpHeaders" to set HTTP headers in DICOMweb requests

Maintenance
-----------

* Fix issues with drag-and-drop
* Fix handling of "token": The authorization header was not set in QIDO-RS requests
* Start at the first frame for series presumably not containing 3D images (e.g. US)
* More tolerance wrt. bad values of the Pixel Spacing (0028,0030) tag
* Support of DICOM images without the Study Date (0008,0020) tag
* Upgraded Vue.js to 2.6.14

