@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* New button "Stretch to whole range" in the "Change windowing" menu
+
 
 Version 2.5 (2022-12-05)
 ========================
